fixed alignment of post-meta, hidden tags and changed publish date format.

--- a/assets/css/ui/_posts.scss
+++ b/assets/css/ui/_posts.scss
@@ -54,7 +54,8 @@
     }
 }
 
-.post-meta {
+.post-meta,
+.post-tags {
     color: $color-soft;
     font-size: $text-small;
     margin-bottom: $base-spacing-unit;
@@ -66,6 +67,20 @@
 }
 
 .the-post {
+    padding-top: $base-spacing-unit;
+
+    .post-meta,
+    .post-tags {
+        text-align: center;
+    }
+
+    /**
+     * Post tags aren't visible but if desired can be toggled below.
+     */
+    .post-tags {
+        display: none;
+    }
+
     .post-title {
         margin-left: auto;
         margin-right: auto;
